loaded pictures and made html layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,90 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        
+        <div class="navbar">
+            <div class="container">
+                <a href="#">Lo<span>go</span></a>
+                <img id="mobile-cta" class="mobile-menu" src="images/menu.png" alt="Open navigation">
+                <nav>
+                    <img id="mobile-exit" class-mobile-menu-exit src="images/Exit Icon - Free PNG & SVG 149798 - Noun Project_files/exit.png" alt="Close navigation">
+                    <ul class="primary-nav">
+                        <li><a href="#" class="current">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Pricing</a></li>
+                    </ul>
+                    <ul class="secondary-nav">
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#" class="go-premium-cta">Go Premium</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <section class="hero">
+            <div class="container">
+                <div class="left-col">
+                    <p class="subhead">IT's Nitty &amp; Gritty</p>
+                    <h1>A Task App That Doesn't Stink</h1>
+                    <div class="hero-cta"></div>
+                    <a href="#" class="primary-cta">Try For Free</a>
+                    <a href="#" class="watch-video-cta"></a>
+                    <img src="images/video.png">
+                </div>
+            </div>
+            <img src="images/illustration.png" alt="illustration" class="hero-img">
+        </section>
+        <section class="features-section">
+            <div class="container">
+                <ul>
+                    <li>Unlimited Tasks</li>
+                    <li>SMS Task Reminders</li>
+                    <li>Confetty Explosions upon Task Completions</li>
+                    <li>Social Media Announcements</li>
+                    <li>Real Time Collaboration</li>
+                    <li>Other awesome features</li>
+                </ul>
+                <img src="images/phone.avif" alt="Holding a phone">
+            </div>
+        </section>
+        <section class="testimonial-section">
+            <div class="container">
+                <ul>
+                    <li>
+                        <img src="images/person1.jpg" alt="person">
+                        <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing.</blockquote>
+                        <cite>- Hasan Osmin</cite>
+                    </li>
+                    <li>
+                        <img src="images/person2.jpg" alt="person">
+                        <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing.</blockquote>
+                        <cite>- Tidza Omerova</cite>
+                    </li>
+                    <li>
+                        <img src="images/person4.jpg" alt="person">
+                        <blockquote>Lorem ipsum dolor sit amet, consectetur adipisicing.</blockquote>
+                        <cite>- Mehmed Husin</cite>
+                    </li>
+
+                </ul>
+            </div>
+        </section>
+        <section class="contact-section">
+            <div class="containe">
+                <div class="contact-left">
+                    <h2>Contact</h2>
+                    <form action="">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name">
+
+                        <!-- <label for="email">Email</label>
+                        <input type="email" id="email" name="email"> -->
+                        <label for="message">Message</label>
+                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                        <input type="submit" class="send-message-cta" value="Send Message">
+                    </form>
+                </div>
+                <div class="contact-right"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2768.052443019299!2d14.500469276743397!3d46.069995471090266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476532bef2e6f121%3A0x9770eada692a94a6!2sVeleposlani%C5%A1tvo%20Bosne%20in%20Hercegovine!5e0!3m2!1ssl!2ssi!4v1720352439907!5m2!1ssl!2ssi" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+            </div>
+        </section>
+ 
     </body>
 </html>
