styling with css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="navbar">
             <div class="container">
-                <a href="#">Lo<span>go</span></a>
+                <a href="#" class="logo">Lo<span>go</span></a>
                 <img id="mobile-cta" class="mobile-menu" src="images/menu.png" alt="Open navigation">
                 <nav>
                     <img id="mobile-exit" class-mobile-menu-exit src="images/Exit Icon - Free PNG & SVG 149798 - Noun Project_files/exit.png" alt="Close navigation">
@@ -34,8 +34,10 @@
                     <h1>A Task App That Doesn't Stink</h1>
                     <div class="hero-cta"></div>
                     <a href="#" class="primary-cta">Try For Free</a>
-                    <a href="#" class="watch-video-cta"></a>
-                    <img src="images/video.png">
+                    <div class="video">
+                        <a href="#" class="watch-video-cta">Watch a video</a>
+                        <img src="images/video.png" alt="Watch a video icon">
+                    </div>
                 </div>
             </div>
             <img src="images/illustration.png" alt="illustration" class="hero-img">
