more css features

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                     <h1>A Task App That Doesn't Stink</h1>
                     <div class="hero-cta"></div>
                     <a href="#" class="primary-cta">Try For Free</a>
-                    <div class="video">
-                        <a href="#" class="watch-video-cta">Watch a video</a>
-                        <img src="images/video.png" alt="Watch a video icon">
-                    </div>
+                        <a href="#" class="watch-video-cta">
+                            <img src="images/video.png" alt="Watch a video icon">
+                            Watch a video
+                        </a>
                 </div>
+                <img src="images/illustration.png" alt="illustration" class="hero-img">
             </div>
-            <img src="images/illustration.png" alt="illustration" class="hero-img">
         </section>
         <section class="features-section">
             <div class="container">
-                <ul>
+                <ul class="features-list">
                     <li>Unlimited Tasks</li>
                     <li>SMS Task Reminders</li>
                     <li>Confetty Explosions upon Task Completions</li>
