--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#" class="logo">Lo<span>go</span></a>
                 <img id="mobile-cta" class="mobile-menu" src="images/menu.png" alt="Open navigation">
                 <nav>
-                    <img id="mobile-exit" class-mobile-menu-exit src="images/Exit Icon - Free PNG & SVG 149798 - Noun Project_files/exit.png" alt="Close navigation">
+                    <img id="mobile-exit" class="mobile-menu-exit" src="images/Exit Icon - Free PNG & SVG 149798 - Noun Project_files/exit.png" alt="Close navigation">
                     <ul class="primary-nav">
                         <li><a href="#" class="current">Home</a></li>
                         <li><a href="#">Features</a></li>
