--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="navbar">
             <div class="container">
-                <a href="#" class="logo">Lo<span>go</span></a>
+                <a href="#" class="logo">Al<span>Ham</span></a>
                 <img id="mobile-cta" class="mobile-menu" src="images/menu.png" alt="Open navigation">
                 <nav>
                     <img id="mobile-exit" class="mobile-menu-exit" src="images/Exit Icon - Free PNG & SVG 149798 - Noun Project_files/exit.png" alt="Close navigation">
